# IsInstance

./: IsInstance.cabal  README.md
src/: IsInstance.hs
test/: fail1.hs  fail2.hs  fail3.hs  test.hs  test2.hs
