name:                IsInstance
version:             0.0
synopsis:            check whether a type is an instance of a class
description:         check whether a type is an instance of a class
                     by generating instances of a class @TryCxt@
homepage:            https://github.com/aavogt/IsInstance
license:             BSD3
license-file:        LICENSE
author:              Adam Vogt <vogt.adam@gmail.com>
maintainer:          Adam Vogt <vogt.adam@gmail.com>
category:            Development
build-type:          Simple
cabal-version:       >=1.10
tested-with:  GHC==7.10.2,
              GHC==8.0.0
              -- 7.8.4 needs a fair amount of work because of
              -- changes to Language.Haskell.TH.Syntax.Pred in
              -- 7.10 (changed to a synonym for Type)

library
  exposed-modules:     IsInstance
  other-extensions:    RankNTypes,
                       OverlappingInstances,
                       FlexibleInstances,
                       MultiParamTypeClasses,
                       ConstraintKinds,
                       KindSignatures,
                       TemplateHaskell

  build-depends:       base >=4.8 && <4.10,
                       template-haskell,
                       containers,
                       mtl,
                       syb
  hs-source-dirs:      src
  default-language:    Haskell2010
  if impl(ghc >= 8.0)
    Default-Extensions: UndecidableSuperClasses

